fix alignment issue

--- a/src/blocks/header/children/row/editor.scss
+++ b/src/blocks/header/children/row/editor.scss
@@ -32,11 +32,19 @@
 	.wp-block-kadence-header-column-center-left {
 		flex-grow: 1;
 		justify-content: flex-end !important;
+		> * {
+			margin-left: 0px;
+			margin-right: 0px;
+		}
 	}
 
 	.wp-block-kadence-header-column-center-right {
 		flex-grow: 1;
 		justify-content: flex-start !important;
+		> * {
+			margin-left: 0px;
+			margin-right: 0px;
+		}
 	}
 	&.wp-block-kadence-header-row-layout-contained:not(.specific):not(.extra-specific) {
 		padding: 0 var(--global-content-edge-padding, 15px);
